@@ -776,6 +776,11 @@ end</example>
 			<shortname>put npc</shortname>
 			<description>Moves an NPC to a location on the map in pixels. The first argument is and <ref>npcreference</ref> or an NPC ID number. The second and third arguments are the X,Y pixel position relative to the top left corner of the map. Be aware that using this command can mis-align your NPC with the tile-grid, preventing it from walking normally. To position the NPC by tile, use the <ref>setnpcposition</ref> command.</description>
 		</command>
+		<command id="npcisdisabled">
+			<canon>NPC is disabled (reference)</canon>
+			<shortname>NPC is disabled</shortname>
+			<description>This command returns true if the <ref>npcreference</ref> points to an NPC who has been disabled because of tags or one-time-use.</description>
+		</command>
 	</section>
 	<section title="Moving the Camera">
 		<command id="camerafollowshero">
